--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -567,20 +567,12 @@ video {
   margin-right: auto;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
 .mt-4{
   margin-top: 1rem;
 }
 
-.block{
-  display: block;
+.mt-1{
+  margin-top: 0.25rem;
 }
 
 .flex{
@@ -591,28 +583,12 @@ video {
   height: 100vh;
 }
 
-.w-20{
-  width: 5rem;
-}
-
-.w-32{
-  width: 8rem;
+.h-ascreen{
+  height: 92vh;
 }
 
 .w-24{
   width: 6rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-1\/4{
-  width: 25%;
-}
-
-.w-2\/4{
-  width: 50%;
 }
 
 .flex-col{
@@ -631,31 +607,8 @@ video {
   justify-content: center;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-b-2{
   border-bottom-width: 2px;
-}
-
-.border-b-4{
-  border-bottom-width: 4px;
-}
-
-.border-white{
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.border-t-slate-400{
-  --tw-border-opacity: 1;
-  border-top-color: rgb(148 163 184 / var(--tw-border-opacity));
-}
-
-.border-b-white{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-b-red-200{
@@ -663,58 +616,26 @@ video {
   border-bottom-color: rgb(254 202 202 / var(--tw-border-opacity));
 }
 
-.border-b-red-300{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(252 165 165 / var(--tw-border-opacity));
-}
-
-.border-b-red-100{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(254 226 226 / var(--tw-border-opacity));
-}
-
-.border-b-red-50{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(254 242 242 / var(--tw-border-opacity));
-}
-
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.p-0{
-  padding: 0px;
-}
-
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-5{
-  padding: 1.25rem;
 }
 
 .p-1{
   padding: 0.25rem;
 }
 
-.p-4{
-  padding: 1rem;
+.p-5{
+  padding: 1.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-2{
+  padding: 0.5rem;
 }
 
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.pt-2{
-  padding-top: 0.5rem;
 }
 
 .text-center{
@@ -725,42 +646,13 @@ video {
   font-family: Work Sans;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .font-semibold{
   font-weight: 600;
-}
-
-.font-bold{
-  font-weight: 700;
 }
 
 .font-medium{
@@ -772,24 +664,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-accent{
-  --tw-text-opacity: 1;
-  color: rgb(102 204 193 / var(--tw-text-opacity));
-}
-
-.text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
 .text-red-200{
   --tw-text-opacity: 1;
   color: rgb(254 202 202 / var(--tw-text-opacity));
-}
-
-.text-red-300{
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
 .verifying{
@@ -797,19 +674,9 @@ video {
   justify-content: center;
 }
 
-.hover\:border-b-red-200:hover{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(254 202 202 / var(--tw-border-opacity));
-}
-
 .hover\:border-b-white:hover{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
-.hover\:text-red-200:hover{
-  --tw-text-opacity: 1;
-  color: rgb(254 202 202 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover{
@@ -823,61 +690,8 @@ video {
     margin-right: auto;
   }
 
-  .md\:block{
-    display: block;
-  }
-
-  .md\:w-3\/4{
-    width: 75%;
-  }
-
-  .md\:w-96{
-    width: 24rem;
-  }
-
-  .md\:w-9{
-    width: 2.25rem;
-  }
-
-  .md\:w-2\/4{
-    width: 50%;
-  }
-
-  .md\:w-1\/2{
-    width: 50%;
-  }
-
-  .md\:w-1\/4{
-    width: 25%;
-  }
-
-  .md\:w-full{
-    width: 100%;
-  }
-
-  .md\:w-auto{
-    width: auto;
-  }
-
-  .md\:w-0\.5{
-    width: 0.125rem;
-  }
-
-  .md\:w-0{
-    width: 0px;
-  }
-
-  .md\:w-1\/3{
-    width: 33.333333%;
-  }
-
   .md\:w-2\/3{
     width: 66.666667%;
-  }
-
-  .md\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .md\:text-xl{
@@ -885,25 +699,8 @@ video {
     line-height: 1.75rem;
   }
 
-  .md\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-6xl{
-    font-size: 3.75rem;
-    line-height: 1;
-  }
-}
-
-@media (min-width: 1024px){
-  .lg\:text-5xl{
+  .md\:text-5xl{
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 }
